# hyperion

./: .gitignore  AGENTS.md  Cargo.toml  EXPORT_GUIDE.md  HARDENING.md  HYPERION.md  README.md  RECEIPT.md  ROADMAP.md  SCHEMAS.md  TASKS.md  WORKPLAN.md  copilot-help.txt  hyperion.db-shm  hyperion.db-wal
.github/: copilot-instructions.md
.skillcraft/: REPORT.md
assets/templates/: EXPORT_GUIDE.template.md
execution/: approved_commands.txt  changed_files.json  checkws_run_log.txt  commands.txt  commands_from_plan.txt  commands_to_run.txt  developer_onboard_log.txt  discover_run_log.txt  discovery_log.md  exit_codes.json  git_status.txt  last_error.txt  librarian_discovery.md  librarian_run_log.txt  log.txt  next_task_context.json  phase_progress.json  plan_discovery_report.json  plan_progress.json  plan_progress.json.20260128T024156Z.old  plan_progress.json.20260128T032224Z.old  plan_progress.json.20260128T053724Z.old  plan_validation_report.json  result.json  semgrep-report.json  task_status_summary.json  tasks.json  timings.json  validate_run_log.txt  verification_report.json  verify_list.txt
plans/: phase_plan.json
references/: ASI_FRAMEWORK.md  QUESTIONS.md
scripts/: cast_builder.sh  generate_plan.py  helper.sh
src/: agent.rs  apply.rs  cast_builder.rs  doctor.rs  exporter.rs  fs_watch.rs  main.rs  models.rs  new_module.rs  orchestrator.rs  queue.rs  request.rs  runner.rs  telemetry.rs  tui.rs  validator.rs  watcher.rs  worker.rs
taskjson/: CAST-0001.json  CAST-0001.json.bak  sample-change.json  sample-request.json
tests/: phase_gating.rs
(+4 files in other folders)
